--- a/web/css/oiltilda.css
+++ b/web/css/oiltilda.css
@@ -3690,8 +3690,8 @@ img:not([src]) {
 .t396__artboard {
     position: relative;
     width: 100%;
-    height: 100vh;
-    overflow: hidden
+    height: 810px;
+    overflow: hidden;
 }
 
 .t396__artboard.rendering .tn-elem {
